Product images with product names

--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -14,7 +14,7 @@
     {% set typeSupplierSet = product.supplierSet is same as(true) %}
     {% set typeSetOrSupplierSet = typeSet or typeSupplierSet %}
     {% set variantsCount = product.getVariantsCount(domain.id) %}
-    {% set stickers = getImages(product, 'sticker') %}
+    {% set stickers = getImageViews(product, 'sticker') %}
     {% set productUrl = url('front_product_detail', {id: product.id}) %}
 
     <meta itemprop="url" content="{{ productUrl }}">
