--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -18,6 +18,13 @@
 {% endblock %}
 
 {% block infoRow %}
+    {% if isInfoRowVisible() %}
+        <div class="web__container" id="js-info-row" data-now="{{ 'now'|formatDateCore(constant('App\\Component\\InfoRow\\InfoRowFacade::COOKIE_CLOSED_AT_FORMAT')) }}">
+            <div class="box-info-row">
+                {{ getInfoRowText() }}
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
 
 {% block pageStyles %}
