--- a/templates/Front/Inline/MeasuringScript/ecomail.html.twig
+++ b/templates/Front/Inline/MeasuringScript/ecomail.html.twig
@@ -5,7 +5,7 @@
         };p[i].q=p[i].q||[];n=l.createElement(o);g=l.getElementsByTagName(o)[0];n.async=1;
         n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,"script","//d1fc8wv8zag5ca.cloudfront.net/2.4.2/sp.js","ecotrack"));
     window.ecotrack('newTracker', 'cf', 'd2dpiwfhf3tz0r.cloudfront.net', {
-        appId: 'info@tropicliberec.cz'
+        appId: 'tropicliberec'
     });
     window.ecotrack('setUserIdFromLocation', 'ecmid');
     {% if is_granted('ROLE_LOGGED_CUSTOMER') %}
