Add info icon to free shipping notice

--- a/assets/styles/frontend/common/components/in/icon.less
+++ b/assets/styles/frontend/common/components/in/icon.less
@@ -17,6 +17,12 @@
         cursor: help;
     }
 
+    &--static {
+        position: static;
+        line-height: normal;
+        margin-left: 8px;
+    }
+
     &--detail {
         position: relative;
         line-height: 15px;
