--- a/templates/Front/Content/ReasonsToBuy/index.html.twig
+++ b/templates/Front/Content/ReasonsToBuy/index.html.twig
@@ -19,6 +19,7 @@
                 <p class="list-reasons-to-buy__item__text">
                     {{ 'Doprava při nákupu nad 1000 Kč zdarma'|trans }}
                 </p>
+                <i class="svg svg-info in-icon in-icon--info in-icon--static js-tooltip" data-toggle="tooltip" title="" data-original-title="{{ 'Doprava zdarma u Zásilkovny od 1000 Kč a u PPL od 2000 Kč'|trans }}"></i>
             </li>
             <li class="list-reasons-to-buy__item">
                 <div class="list-reasons-to-buy__item__icon">
