Slovak translation of gift certificate

--- a/templates/Mail/Order/GiftCertificate/giftCertificate.html.twig
+++ b/templates/Mail/Order/GiftCertificate/giftCertificate.html.twig
@@ -39,7 +39,7 @@
                 {% endif %}
             </div>
             <p style="margin:0px; padding:0px; font-size:10px; line-height:10px;{% if greyscale is same as(false) %}color:#0077b3;{% else %}color:#000;{% endif %}">
-                {{ 'Kód vložte v pokladně při dokočení objednávky.'|trans }}
+                {{ 'Kód vložte v pokladně při dokončení objednávky.'|trans }}
             </p>
             <p style="margin:0px; padding:0px; font-size:10px; line-height:10px;{% if greyscale is same as(false) %}color:#0077b3;{% else %}color:#000;{% endif %}">
                 {{ 'Platnost poukazu je 12 měsíců od zakoupení.'|trans }}
