Pre-list now has bestsellers instead of the most favorite products

--- a/templates/Front/Content/Product/preListingCategoryList.html.twig
+++ b/templates/Front/Content/Product/preListingCategoryList.html.twig
@@ -36,7 +36,7 @@
     </div>
 
     {{ render(controller('App\\Controller\\Front\\TopProductController:listAction')) }}
-    {{ render(controller('App\\Controller\\Front\\BestsellingProductController:listAction', {'category': category})) }}
+    {{ render(controller('App\\Controller\\Front\\BestsellerController:listAction')) }}
 
     <div class="web__line">
         <div class="web__container">
