Fix z-index on static icon tooltip

--- a/assets/styles/frontend/common/components/in/icon.less
+++ b/assets/styles/frontend/common/components/in/icon.less
@@ -21,6 +21,10 @@
         position: static;
         line-height: normal;
         margin-left: 8px;
+    
+        & + .tooltip {
+            z-index: 500;
+        }
     }
 
     &--detail {
