[Game Plan] Cookies Policy Banner

--- a/assets/styles/frontend/common/main-base.less
+++ b/assets/styles/frontend/common/main-base.less
@@ -19,6 +19,10 @@
 @import "libs/tooltip/tooltip-custom.less";
 @import "libs/selectric/selectric.less";
 
+//// Cookie Consent 
+@import "libs/cookie-consent/cookie-consent.less";
+@import "libs/cookie-consent/cookie-consent-custom.less";
+
 // Layout
 @import "layout/layout.less";
 
