[TROPIC-215] Correct URL in Slovak gift certificate

--- a/templates/Mail/Order/GiftCertificate/giftCertificate.html.twig
+++ b/templates/Mail/Order/GiftCertificate/giftCertificate.html.twig
@@ -47,8 +47,8 @@
             <p style="margin:0px; padding:0px; font-size:10px; line-height:10px;{% if greyscale is same as(false) %}color:#0077b3;{% else %}color:#000;{% endif %}">
                 {{ 'TROPIC LIBEREC s.r.o., U Sadu 655, Liberec 25, IČO: 25415981'|trans|raw }}
             </p>
-            <a style="display:block; margin:0px 0px 10px 0px; padding:0px; font-size:10px; line-height:10px;{% if greyscale is same as(false) %}color:#0077b3;{% else %}color:#000;{% endif %}" href="http://www.tropicfishing.cz/">
-                <strong>{{ 'http://www.tropicfishing.cz/'|trans }}</strong>
+            <a style="display:block; margin:0px 0px 10px 0px; padding:0px; font-size:10px; line-height:10px;{% if greyscale is same as(false) %}color:#0077b3;{% else %}color:#000;{% endif %}" href="{{ domainUrl }}">
+                <strong>{{ domainUrl }}</strong>
             </a>
         </div>
     </div>
