Modal link for cookies in footer

--- a/assets/styles/frontend/common/layout/footer.less
+++ b/assets/styles/frontend/common/layout/footer.less
@@ -523,6 +523,18 @@
         max-width: 588px;
         text-align: center;
         line-height: 18px;
+        margin-bottom: 18px;
+
+        font-size: 11px + @font-size-alt-expand;
+        font-family: @font-alt;
+
+        @media @query-lg {
+            margin-bottom: 26px;
+        }
+    }
+
+    &__cookies {
+        display: block;
         margin-bottom: 31px;
 
         font-size: 11px + @font-size-alt-expand;
