--- a/templates/Front/Content/Order/index.html.twig
+++ b/templates/Front/Content/Order/index.html.twig
@@ -76,6 +76,9 @@
                         <div class="footer-bottom__rules">
                             {{ 'Podle zákona o evidenci tržeb je prodávající povinen vystavit kupujícímu účtenku. Zároveň je povinen zaevidovat přijatou tržbu u správce daně online; v případě technického výpadku pak nejpozději do 48 hodin.'|trans }}
                         </div>
+                        <a href="javascript:void(0);" class="footer-bottom__cookies dont-print" aria-label="{{ 'Zobrazit nastavení cookies'|trans }}" data-cc="c-settings">
+                            {{ 'Nastavení cookies'|trans }}
+                        </a>
                         <div class="footer-bottom__shopsys dont-print">
                             {{ 'E-shop na míru od'|trans }}
                             {% if isEnglishDomain() is same as (true) %}
